# programming-challenges

./: .gitignore
anagram_maker_go/: README.md  dict_3634.txt  input.txt  maker.go  maker_test.go
calculating_water_c/: README.md  main.c
fibonacci_base_python/: Dockerfile  README.md  docker-compose.yml  main.py  main_test.py
five_problems_c/: README.md  main.c
identicon_haskell/: README.md  identicon.cabal  stack.yaml
identicon_haskell/src/: Main.hs
integer_partitions_haskell/: Dockerfile  README.md  docker-compose.yml  intpart.hs
spaghetti_wiring_haskell/: LICENSE  README.md  input1.txt  input2.txt  input3.txt  spaghetti-wiring.cabal
spaghetti_wiring_haskell/app/: Main.hs
spaghetti_wiring_haskell/src/: Wiring.hs
stochastic_computing_rust/: Cargo.toml  README.md
stochastic_computing_rust/src/: main.rs
strings_generator_rust/: Cargo.toml  README.md
strings_generator_rust/src/: main.rs  regexp.rs  syntax.rs  tokens.rs
up_arrow_notation_racket/: README.md  problem.txt  up-arrow.rkt
uuencoding_rust/: Cargo.toml  README.md  input.txt.uu
uuencoding_rust/src/: decode.rs  encode.rs  lib.rs  main.rs
weave_insert_rust/: Cargo.toml  README.md
weave_insert_rust/src/: lib.rs
