name:                spaghetti-wiring
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/yamnikov-oleg/spaghetti-wiring#readme
license:             BSD3
license-file:        LICENSE
author:              Oleg Yamnikov
maintainer:          bgeyts667@gmail.com
copyright:           2017 Oleg Yamnikov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Wiring
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable spaghetti-wiring-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , spaghetti-wiring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yamnikov-oleg/spaghetti-wiring
